@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.impl.migration.validation.activity;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.operaton.bpm.engine.ActivityTypes;
@@ -35,7 +34,7 @@ public class SupportedPassiveEventTriggerActivityValidator implements MigrationA
 
   public static final SupportedPassiveEventTriggerActivityValidator INSTANCE = new SupportedPassiveEventTriggerActivityValidator();
 
-  public static final List<String> SUPPORTED_TYPES = Arrays.asList(
+  private static final List<String> SUPPORTED_TYPES = List.of(
     ActivityTypes.BOUNDARY_MESSAGE,
     ActivityTypes.BOUNDARY_SIGNAL,
     ActivityTypes.BOUNDARY_TIMER,
